# module-manager

./: .gitignore  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  README.md  example.bash  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  tag.yml  test.yml
docs/: collective-environments.md  configuration.md  development.md  environment-modules.md  index.md  installation.md  python-tools.md  reference.md  rust-tools.md  shell-tools.md  uninstall.md
docs/stylesheets/: extra.css
module_manager/: __init__.py  cli.py  config.py  deploy.py  modulefile.py
tests/: test_cli.py  test_config.py  test_modulefile.py
