[project]
name = "module-manager"
version = "0.1.1"
description = "Deploy Python and Rust CLI tools behind GNU environment modulefiles"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "ejb90" },
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich-click>=1.8",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
module-manager = "module_manager.cli:main"

[project.urls]
Homepage = "https://github.com/ejb90/module-manager"
Documentation = "https://module-manager.readthedocs.io/"
Tests = "https://app.codecov.io/gh/ejb90/module-manager"
Repository = "https://github.com/ejb90/module-manager"

[dependency-groups]
dev = [
    "mkdocs-material>=9.5",
    "pytest>=8.0",
    "pytest-cov>=7.0",
    "ruff>=0.14",
    "twine>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["module_manager"]

[tool.ruff]
# Target modern Python
target-version = "py310"
line-length = 120
fix = true
show-fixes = true

# Exclude common non-source directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.ruff.lint]
# Enable a strict, opinionated rule set
select = [
    "F",     # Pyflakes (unused imports, undefined names)
    "E",     # Pycodestyle errors
    "W",     # Pycodestyle warnings
    "I",     # Import sorting (isort)
    "N",     # PEP8 naming
    "B",     # Bugbear
    "C4",    # Comprehension optimisations
    "UP",    # PyUpgrade
    "SIM",   # Code simplifications
    "ARG",   # Unused function arguments
    "DTZ",   # Datetime timezone issues
    "RUF",   # Ruff-specific rules
    "ANN",   # Type annotations
    "D",     # Docstrings
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Fully Black-compatible formatting
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=module_manager",
    "--cov-report=xml",
    "--cov-report=term",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]
